<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:strokeColor="@android:color/transparent">

    <LinearLayout
        android:id="@+id/cl_dialog_customize_task_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_dialog_customize_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_dialog_customize_task_title"
                style="@style/DialogCustomizeTaskTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/customize_task_title" />

            <ImageView
                android:id="@+id/iv_dialog_customize_task_close_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/close_icon_description"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dialog_customize_task_diary_title"
                style="@style/DialogCustomizeTaskTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/customize_diary_title"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dialog_customize_task_diary_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dialog_customize_task_diary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:hint="@string/diary_title_hint"
                    android:inputType="text"
                    tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dialog_customize_task_diary_description"
                style="@style/DialogCustomizeTaskTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/customize_diary_description"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dialog_customize_task_diary_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dialog_customize_task_diary_description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:gravity="top"
                    android:includeFontPadding="false"
                    android:hint="@string/diary_description_hint"
                    android:inputType="textMultiLine"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dialog_customize_task_diary_due_date"
                style="@style/DialogCustomizeTaskTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/customize_diary_due_date"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dialog_customize_task_diary_due_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="@string/customize_diary_due_date_helper_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dialog_customize_task_diary_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:hint="@string/diary_date_hint"
                    android:includeFontPadding="false"
                    android:inputType="none"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_customize_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:inputType="text"
            android:text="@string/customize_task_title"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>