<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:strokeColor="@android:color/transparent">

    <LinearLayout
        android:id="@+id/ln_item_dialog_confirmation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_dialog_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/dialog_confirmation_description"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_item_dialog_confirmation_question"
            style="@style/DialogConfirmationTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_delete_task_question" />

        <LinearLayout
            android:id="@+id/ln_item_dialog_confirmation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_item_dialog_confirmation_no"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/button_dialog_no"
                android:textSize="12sp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_item_dialog_confirmation_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/button_dialog_yes"
                android:textSize="12sp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>