<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ItemRowContainerColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/cb_item_row_diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        style="@style/ItemRowContainerColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cb_item_row_diary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_item_row_diary_day_data"
                style="@style/ItemRowTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/diary_day_data"
                app:layout_constraintBottom_toTopOf="@+id/tv_item_row_diary_date_data"
                app:layout_constraintEnd_toEndOf="@+id/tv_item_row_diary_date_data"
                app:layout_constraintStart_toStartOf="@+id/tv_item_row_diary_date_data"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_item_row_diary_date_data"
                style="@style/ItemRowDateTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/diary_date_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_row_diary_month_data"
                style="@style/ItemRowTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/diary_month_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_item_row_diary_date_data"
                app:layout_constraintStart_toStartOf="@+id/tv_item_row_diary_date_data"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_row_diary_date_data"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/md_item_row_divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_row_diary_title_data"
                style="@style/ItemRowTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/diary_title_data"
                app:layout_constraintEnd_toStartOf="@+id/cv_item_row_diary_delete_icon"
                app:layout_constraintStart_toEndOf="@+id/md_item_row_divider"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_row_diary_description_data"
                style="@style/ItemRowTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:text="@string/diary_description_data"
                app:layout_constraintEnd_toStartOf="@+id/cv_item_row_diary_delete_icon"
                app:layout_constraintStart_toEndOf="@+id/md_item_row_divider"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_row_diary_title_data"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item_row_diary_delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_item_row_diary_delete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/delete_icon_description"
                    android:src="@drawable/ic_delete" />

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>